Update mandrel-packaging to make it work with latest graal
Includes necessary changes to make mandrel-packaging functional after
https://github.com/oracle/graal/commit/e734181ab90e091bc68115591771b5f80a75db5c